src/test/ui/issues/50000-59999/issue-59029-1.stderr
error[E0220]: associated type `Res` not found for `Self`
  --> $DIR/issue-59029-1.rs:5:52
   |
LL | trait MkSvc<Target, Req> = Svc<Target> where Self::Res: Svc<Req>;
   |                                                    ^^^ associated type `Res` not found

error[E0220]: associated type `Res` not found for `Self`
  --> $DIR/issue-59029-1.rs:5:52
   |
LL | trait MkSvc<Target, Req> = Svc<Target> where Self::Res: Svc<Req>;
   |                                                    ^^^ associated type `Res` not found

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0220`.
